--- a/package.json
+++ b/package.json
@@ -6,13 +6,62 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.21",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@uiw/react-md-editor": "^3.9.5",
+    "axios": "^1.2.0",
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "express": "^4.18.2",
+    "formik": "^2.2.9",
+    "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
+    "react-countup": "^6.4.0",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.39.6",
+    "react-intersection-observer": "^9.4.1",
+    "react-markdown": "^8.0.0",
+    "react-responsive": "^9.0.0-beta.6",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "react-swal": "^4.0.0",
+    "react-toastify": "^9.1.1",
+    "react-transition-group": "^4.4.2",
+    "react-uuid": "^2.0.0",
+    "react-visibility-sensor": "^5.1.1",
+    "react-visibility-sensor-v2": "^1.0.0",
+    "rehype-raw": "^6.1.1",
+    "rehype-sanitize": "^5.0.1",
+    "remark-gfm": "^3.0.1",
+    "sweetalert2": "^11.6.14",
+    "swiper": "^8.0.6",
+    "tw-elements": "^1.0.0-alpha12",
+    "typescript": "^4.5.5",
+    "web-vitals": "^2.1.4"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "next": "13.0.6",
+    "next": "^13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.4.4",
+    "tw-elements": "^1.0.0-alpha13"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.10",
+    "@types/react": "18.0.26",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.3"
   }
 }
