--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.8",
+    "axios": "^1.2.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "^13.0.6",
@@ -54,6 +55,8 @@
     "react-hook-form": "^7.40.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.4",
+    "react-uuid": "^2.0.0",
+    "swiper": "^8.4.5",
     "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
