--- a/package.json
+++ b/package.json
@@ -51,11 +51,18 @@
     "eslint-config-next": "13.0.6",
     "next": "^13.0.6",
     "react": "18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-intersection-observer": "^9.4.1",
+    "react-markdown": "^8.0.4",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.4",
     "react-uuid": "^2.0.0",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
+    "sweetalert2": "^11.6.15",
     "swiper": "^8.4.5",
     "tw-elements": "^1.0.0-alpha13"
   },
