--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-next": "13.0.6",
     "next": "^13.0.6",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.8",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
