minor typ fixes

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.8",
     "axios": "^1.2.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "^13.0.6",
