--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start -p 3001",
     "lint": "next lint",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
