--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "node server.js"
   },
   "scripts": {
+    "analyze": "cross-env ANALYZE=true next build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3001",
