--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.40.0",
     "react-intersection-observer": "^9.4.1",
     "react-markdown": "^8.0.4",
