change api domain

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV= 'production'
-DB_DOMAIN_V1= https://api.mindrisers.jobrisers.com/blog/api/v1/
-NEXT_PUBLIC_DB_DOMAIN= https://api.mindrisers.jobrisers.com
+DB_DOMAIN_V1= https://mindrisers.com.np/blog/api/v1/
+NEXT_PUBLIC_DB_DOMAIN= https://mindrisers.com.np
 NEXT_PUBLIC_DOMAIN= https://www.mindrisers.com.np
