--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "^13.0.6",
+    "rc-pagination": "^3.5.0",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-circular-progressbar": "^2.1.0",
