--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "analyze": "cross-env ANALYZE=true next build",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start ",
     "lint": "next lint",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -54,11 +54,12 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.2.4",
+    "@next/font": "^13.0.6",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.8",
     "axios": "^1.2.0",
+    "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
-    "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "^13.0.6",
     "rc-pagination": "^3.5.0",
@@ -69,6 +70,7 @@
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.40.0",
+    "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.4.1",
     "react-markdown": "^8.0.4",
     "react-responsive": "^9.0.2",
@@ -78,16 +80,18 @@
     "remark-gfm": "^3.0.1",
     "sanitize-html": "^2.10.0",
     "sweetalert2": "^11.6.15",
-    "swiper": "^8.4.5",
+    "swiper": "^11.0.5",
     "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.19",
     "sass": "^1.56.2",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.3.6",
     "typescript": "4.9.3"
   }
 }
