--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.19",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "sass": "^1.56.2",
     "tailwindcss": "^3.3.6",
     "typescript": "4.9.3"
