--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -29,7 +29,7 @@ jobs:
             uses: actions/upload-artifact@v2
             with:
                 name: download frontend artifact
-                path: .next
+                path: ./.next
 
     
     test-frontend:
@@ -60,7 +60,7 @@ jobs:
               uses: actions/download-artifact@v2
               with:
                 name: download frontend artifact
-                path: .next
+                path: ./.next
         
             - name: executing remote ssh commands using password
               uses: appleboy/ssh-action@v1.0.1
