--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -30,6 +30,10 @@ jobs:
             with:
                 name: download frontend artifact
                 path: ./.next
+          
+          - name: Verify
+            run: |
+                 ls -al 
 
     
     test-frontend:
