--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
     build-frontend:
         name: Build Fronend
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-20.04.4
         steps:
           - name: checkout code
             uses: actions/checkout@v2
@@ -41,14 +41,9 @@ jobs:
     test-frontend:
         name: Testing frontend
         needs: build-frontend
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-20.04.4
         steps:
-            - name: Download artifacts from the build job
-              uses: actions/download-artifact@v2
-              with:
-                name: download frontend artifact
-                path: .next
-
+    
             - name: Run the Test
               run: |
                 # running test
