--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -73,7 +73,17 @@ jobs:
                   script: |
                     cd ${{secrets.path}}
                     ./deploy.sh
-            
+            - name: Sync Files
+              uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+              with:
+                username: ${{secrets.FTP_USER}}
+                server: ${{secrets.FTP_SERVER}}
+                password: ${{secrets.FTP_PASSWORD}}
+                port: 22
+                local_path: ".next/*"
+                remote_path: ${{secrets.path}}
+                sftp_only: true
+              
 
 
 
