--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,9 +51,43 @@ jobs:
 
     
     deploy-staging:
-        name: Deploy Production
+        name: Deploy Production Staging
         needs: [build-frontend, test-frontend]
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/new-ui')
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/new-ui') || (github.ref == 'refs/heads/production')
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Download artifacts from the build job
+              uses: actions/download-artifact@v2
+              with:
+                name: download frontend artifact
+                path: ./.next
+        
+            - name: executing remote ssh commands using password
+              uses: appleboy/ssh-action@v1.0.1
+              with:
+                  host: ${{ secrets.FTP_SERVER}}
+                  username: ${{ secrets.FTP_USER }}
+                  password: ${{ secrets.FTP_PASSWORD }}
+                  port: ${{ secrets.FTP_PORT }}
+                  script: |
+                    cd ${{secrets.path}}
+                    ./deploy.sh
+            - name: Sync Files
+              uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+              with:
+                username: ${{secrets.FTP_USER}}
+                server: ${{secrets.FTP_SERVER}}
+                password: ${{secrets.FTP_PASSWORD}}
+                port: 22
+                local_path: ".next/*"
+                remote_path: /var/www/beta.mindrisers.com.np/project-mr/.next/
+                sftp_only: true
+
+    deploy-production:
+        name: Deploy Production
+        needs: [build-frontend, test-frontend,deploy-staging]
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/production')
         runs-on: ubuntu-latest
 
         steps:
