--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -78,5 +78,5 @@ jobs:
                   password: ${{secrets.FTP_PASSWORD}}
                   port: 22
                   local_path: ".next/*"
-                  remote_path: /var/www/beta.mindrisers.com.np/frontend/project-mr
+                  remote_path: /var/www/beta.mindrisers.com.np/frontend/project-mr/.next
                   sftp_only: true
