--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -57,8 +57,8 @@ jobs:
             - name: executing remote ssh commands using password
               uses: appleboy/ssh-action@v1.0.1
               with:
-                  host: ${{secrets.FTP_USER}}
-                  username: ${{secrets.FTP_SERVER}}
+                  host: ${{secrets.FTP_SERVER}}
+                  username: ${{secrets.FTP_USER}}
                   password: ${{secrets.FTP_PASSWORD}}
                   port: 22
                   script: |
