--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -65,3 +65,4 @@ jobs:
                       cd /var/www/beta.mindrisers.com.np/frontend
                       pwd
                       ls -al
+                      ./deploy.sh
