--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -54,15 +54,19 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: executing remote ssh commands using password
-              uses: appleboy/ssh-action@v1.0.1
+            - name: Download artifacts from the build job
+              uses: actions/download-artifact@v2
               with:
-                  host: ${{secrets.FTP_SERVER}}
+                  name: download frontend artifact
+                  path: ./.next
+
+            - name: Sync Files
+              uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+              with:
                   username: ${{secrets.FTP_USER}}
+                  server: ${{secrets.FTP_SERVER}}
                   password: ${{secrets.FTP_PASSWORD}}
                   port: 22
-                  script: |
-                      cd /var/www/beta.mindrisers.com.np/frontend
-                      pwd
-                      ls -al
-                      ./deploy.sh
+                  local_path: ".next/*"
+                  remote_path: /var/www/beta.mindrisers.com.np/frontend/project-mr/.next
+                  sftp_only: true
