--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -60,13 +60,23 @@ jobs:
             #   with:
             #       name: download frontend artifact
             #       path: ./.next
-            - name: Install dependencies
+
+
+            - name: checkout code
+              uses: actions/checkout@v2
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: "20.9.x"
+
+            - name: Install Dependecies
               run: |
-                npm install
+                  npm install
 
             - name: Build App
               run: |
-                npm run build
+                 # npm run build
                   
             - name: Sync Files
               uses: wlixcc/SFTP-Deploy-Action@v1.2.4
