--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -76,8 +76,8 @@ jobs:
 
             - name: Build App
               run: |
-                 # npm run build
-                  
+                  npm run build
+                 
             - name: Sync Files
               uses: wlixcc/SFTP-Deploy-Action@v1.2.4
               with:
