--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,90 +1,88 @@
-name: cicd
+# name: cicd
 
-on:
-    push:
-        branches:
-            - production
-            - new-ui
+# on:
+#     push:
+#         branches:
+#             - production
+#             - new-ui
 
-jobs:
-    build-frontend:
-        name: Build Fronend
-        runs-on: ubuntu-latest
-        steps:
-            - name: checkout code
-              uses: actions/checkout@v2
+# jobs:
+#     build-frontend:
+#         name: Build Fronend
+#         runs-on: ubuntu-latest
+#         steps:
+#             - name: checkout code
+#               uses: actions/checkout@v2
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v2
-              with:
-                  node-version: "20.9.x"
+#             - name: Setup Node.js
+#               uses: actions/setup-node@v2
+#               with:
+#                   node-version: "20.9.x"
 
-            - name: Install Dependecies
-              run: |
-                  npm install
+#             - name: Install Dependecies
+#               run: |
+#                   npm install
 
-            - name: Build App
-              run: |
-                 # npm run build
+#             - name: Build App
+#               run: |
+#                  # npm run build
 
-            # - name: Archive Artifacts
-            #   uses: actions/upload-artifact@v2
-            #   with:
-            #       name: download frontend artifact
-            #       path: ./.next
+#             # - name: Archive Artifacts
+#             #   uses: actions/upload-artifact@v2
+#             #   with:
+#             #       name: download frontend artifact
+#             #       path: ./.next
 
-            # - name: Verify
-            #   run: |
-            #       ls -al
+#             # - name: Verify
+#             #   run: |
+#             #       ls -al
 
-    test-frontend:
-        name: Testing frontend
-        needs: build-frontend
-        runs-on: ubuntu-latest
-        steps:
-            - name: Run the Test
-              run: |
-                  # running test
-                  # to do it later
-           
+#     test-frontend:
+#         name: Testing frontend
+#         needs: build-frontend
+#         runs-on: ubuntu-latest
+#         steps:
+#             - name: Run the Test
+#               run: |
+#                   # running test
+#                   # to do it later
 
-    deploy-production:
-        name: Deploy Production
-        needs: [build-frontend, test-frontend]
-        if: github.event_name == 'push' &&  (github.ref == 'refs/heads/production')
-        runs-on: ubuntu-latest
+#     deploy-production:
+#         name: Deploy Production
+#         needs: [build-frontend, test-frontend]
+#         if: github.event_name == 'push' &&  (github.ref == 'refs/heads/production')
+#         runs-on: ubuntu-latest
 
-        steps:
-            # - name: Download artifacts from the build job
-            #   uses: actions/download-artifact@v2
-            #   with:
-            #       name: download frontend artifact
-            #       path: ./.next
+#         steps:
+#             # - name: Download artifacts from the build job
+#             #   uses: actions/download-artifact@v2
+#             #   with:
+#             #       name: download frontend artifact
+#             #       path: ./.next
 
+#             - name: checkout code
+#               uses: actions/checkout@v2
 
-            - name: checkout code
-              uses: actions/checkout@v2
+#             - name: Setup Node.js
+#               uses: actions/setup-node@v2
+#               with:
+#                   node-version: "20.9.x"
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v2
-              with:
-                  node-version: "20.9.x"
+#             - name: Install Dependecies
+#               run: |
+#                   npm install
 
-            - name: Install Dependecies
-              run: |
-                  npm install
+#             - name: Build App
+#               run: |
+#                   npm run build
 
-            - name: Build App
-              run: |
-                  npm run build
-                 
-            - name: Sync Files
-              uses: wlixcc/SFTP-Deploy-Action@v1.2.4
-              with:
-                  username: ${{secrets.FTP_USER}}
-                  server: ${{secrets.FTP_SERVER}}
-                  password: ${{secrets.FTP_PASSWORD}}
-                  port: 22
-                  local_path: ".next/*"
-                  remote_path: /var/www/beta.mindrisers.com.np/frontend/project-mr/.next
-                  sftp_only: true
+#             - name: Sync Files
+#               uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+#               with:
+#                   username: ${{secrets.FTP_USER}}
+#                   server: ${{secrets.FTP_SERVER}}
+#                   password: ${{secrets.FTP_PASSWORD}}
+#                   port: 22
+#                   local_path: ".next/*"
+#                   remote_path: /var/www/beta.mindrisers.com.np/frontend/project-mr/.next
+#                   sftp_only: true
