--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,11 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "tabWidth": 4,
-  "proseWrap":"never"
+    "plugins": ["prettier-plugin-tailwindcss"],
+    "tabWidth": 4,
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "arrowParens": "always",
+    "endOfLine": "auto"
 }
