--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "node server.js"
   },
   "scripts": {
-    "prod":"npm run build && npm start",
-    "lighthouse":"lighthouse http://localhost:3000/",
+    "prod": "npm run build && npm start",
+    "lighthouse": "lighthouse http://localhost:3000/",
     "analyze": "cross-env ANALYZE=true next build",
     "dev": "next dev",
     "build": "next build",
@@ -63,6 +63,7 @@
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "eslint-config-next": "13.0.6",
+    "moment": "^2.30.1",
     "next": "^13.0.6",
     "rc-pagination": "^3.5.0",
     "react": "18.2.0",
