--- a/package.json
+++ b/package.json
@@ -57,40 +57,27 @@
   "dependencies": {
     "@next/bundle-analyzer": "^13.2.4",
     "@next/font": "^13.0.6",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.8",
     "axios": "^1.2.0",
     "classnames": "^2.3.2",
-    "dotenv": "^16.0.3",
-    "eslint-config-next": "13.0.6",
     "moment": "^2.30.1",
     "next": "^13.0.6",
     "rc-pagination": "^3.5.0",
     "react": "18.2.0",
-    "react-burger-menu": "^3.0.8",
-    "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.40.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.4.1",
-    "react-markdown": "^8.0.4",
-    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.4",
-    "react-uuid": "^2.0.0",
-    "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1",
-    "sanitize-html": "^2.10.0",
-    "sweetalert2": "^11.6.15",
-    "swiper": "^11.0.5",
-    "tw-elements": "^1.0.0-alpha13"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.55.0",
+    "eslint-config-next": "^14.2.3",
     "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.19",
     "prettier": "^3.1.1",
