--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@next/font": "^13.0.6",
     "axios": "^1.2.0",
     "classnames": "^2.3.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.30.1",
     "next": "^13.0.6",
     "rc-pagination": "^3.5.0",
